--- a/glossar.bib
+++ b/glossar.bib
@@ -4498,4 +4498,33 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   url       = {http://dx.doi.org/10.29085/9781783303755},
 }
 
+@Article{Rosengaard2024,
+  author   = {Rosengaard, Louise Olsbro and Andersen, Mikkel Zola and Rosenberg, Jacob and Fonnes, Siv},
+  journal  = {PeerJ},
+  title    = {Several methods for assessing research waste in reviews with a systematic search: a scoping review},
+  year     = {2024},
+  issn     = {2167-8359},
+  month    = nov,
+  pages    = {e18466},
+  volume   = {12},
+  abstract = {Background
+               Research waste is present in all study designs and can have significant consequences for science, including reducing the reliability of research findings and contributing to the inefficient use of resources. Estimates suggest that as much as 85% of all biomedical research is wasted. However, it is uncertain how avoidable research waste is assessed in specific types of study designs and what methods could be used to examine different aspects of research waste. We aimed to investigate which methods, systematic reviews, scoping reviews, and overviews of reviews discussing research waste, have used to assess avoidable research waste.
+            
+            
+               Materials and Methods
+               We published a protocol in the Open Science Framework prospectively (https://osf.io/2fbp4). We searched PubMed and Embase with a 30-year limit (January 1993–August 2023). The concept examined was how research waste and related synonyms (\textit{e.g.}, unnecessary, redundant, duplicate, \textit{etc}.) were assessed in reviews with a systematic search: systematic, scoping, or overviews of reviews. We extracted data on the method used in the review to examine for research waste and for which study design this method was applied.
+            
+            
+               Results
+               The search identified 4,285 records of which 93 reviews with systematic searches were included. The reviews examined a median of 90 (range 10–6,781) studies, where the study designs most commonly included were randomized controlled trials (48%) and systematic reviews (33%). In the last ten years, the number of reports assessing research waste has increased. More than 50% of examined reviews reported evaluating methodological research waste among included studies, typically using tools such as one of Cochrane Risk of Bias tools (\textit{n} = 8) for randomized controlled trials or AMSTAR 1 or 2 (\textit{n} = 12) for systematic reviews. One fourth of reviews assessed reporting guideline adherence to \textit{e.g.}, CONSORT (\textit{n} = 4) for randomized controlled trials or PRISMA (\textit{n} = 6) for systematic reviews.
+            
+            
+               Conclusion
+               Reviews with systematic searches focus on methodological quality and reporting guideline adherence when examining research waste. However, this scoping review revealed that a wide range of tools are used, which may pose difficulties in comparing examinations and performing meta-research. This review aids researchers in selecting methodologies and contributes to the ongoing discourse on optimizing research efficiency.},
+  doi      = {10.7717/peerj.18466},
+  file     = {:Rosengaard2024 - Several Methods for Assessing Research Waste in Reviews with a Systematic Search_ a Scoping Review.pdf:PDF},
+  keywords = {Research waste, Evidence-based medicine, Redundant research, Duplicate efforts, Systematic review, Scoping review},
+  url      = {https://doi.org/10.7717/peerj.18466},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
