--- a/glossar.bib
+++ b/glossar.bib
@@ -4527,4 +4527,20 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   url      = {https://doi.org/10.7717/peerj.18466},
 }
 
+@Article{Rosengaard2024a,
+  author   = {Rosengaard, Louise Olsbro and Andersen, Mikkel Zola and Rosenberg, Jacob and Fonnes, Siv},
+  journal  = {J Evid Based Med},
+  title    = {Five aspects of research waste in biomedicine: A scoping review},
+  year     = {2024},
+  month    = may,
+  number   = {2},
+  pages    = {351--359},
+  volume   = {17},
+  abstract = {Abstract Background The number of published journal articles has grown exponentially during the last 30 years, which may have led to some wasteful research. However, the terminology associated with research waste remains unclear. To address this, we aimed to identify, define, and categorize the aspects of research waste in published biomedical reports. Methods In this scoping review, we systematically searched for biomedical literature reports from 1993 to 2023 in two databases, focusing on those addressing and defining research waste. Through data charting, we analyzed and categorized the aspects of research waste. Results Based on 4285 initial records in the searches, a total of 832 reports were included in the analysis. The included reports were primarily narrative reviews (26\%) and original reports (21\%). We categorized research waste into five aspects: methodological, invisible, negligible, underreported, and structural (MINUS) research waste. More than half of the reports (56\%) covered methodological research waste concerning flaws in study design, study conduct, or analysis. Invisible research waste covered nonpublication, discontinuation, and lack of data-sharing. Negligible research waste primarily concerned unnecessary repetition, for example, stemming from the absence of preceding a trial with a systematic review of the literature. Underreported research waste mainly included poor reporting, resulting in a lack of transparency. Structural research waste comprised inadequate management, collaboration, prioritization, implementation, and dissemination. Conclusion MINUS encapsulates the five main aspects of research waste. Recognizing these aspects of research waste is important for addressing and preventing further research waste and thereby ensuring efficient resource allocation and scientific integrity.},
+  doi      = {10.1111/jebm.12616},
+  file     = {:Rosengaard2024a - Five Aspects of Research Waste in Biomedicine_ a Scoping Review.pdf:PDF},
+  keywords = {biomedical research, evidence gaps, evidence-based medicine, research waste, review},
+  url      = {https://onlinelibrary.wiley.com/doi/abs/10.1111/jebm.12616},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
