information retrieval (hersh2020) added

--- a/glossar.bib
+++ b/glossar.bib
@@ -4543,4 +4543,17 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   url      = {https://onlinelibrary.wiley.com/doi/abs/10.1111/jebm.12616},
 }
 
+@Book{Hersh2020,
+  author    = {William Hersh},
+  publisher = {Springer Cham},
+  title     = {{Information Retrieval: A Biomedical and Health Perspective}},
+  year      = {2020},
+  edition   = {4th ed.},
+  isbn      = {978-3-030-47686-1},
+  series    = {Health Informatics},
+  doi       = {10.1007/978-3-030-47686-1},
+  file      = {:Hersh2020 - Information Retrieval_ a Biomedical and Health Perspective.pdf:PDF;:Hersh2020 - Information Retrieval_ a Biomedical and Health Perspective.epub:ePUB},
+  issn      = {2197-3741},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
