--- a/glossar.bib
+++ b/glossar.bib
@@ -4556,4 +4556,48 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   issn      = {2197-3741},
 }
 
+@Article{Lagisz2025,
+  author   = {Lagisz, Malgorzata and Yang, Yefeng and Young, Sarah and Nakagawa, Shinichi},
+  journal  = {Res Synth Methods},
+  title    = {A practical guide to evaluating sensitivity of literature search strings for systematic reviews using relative recall},
+  year     = {2025},
+  pages    = {1--14},
+  abstract = {Systematic searches of published literature are a vital component of systematic reviews. When search strings are not “sensitive,” they may miss many relevant studies limiting, or even biasing, the range of evidence available for synthesis. Concerningly, conducting and reporting evaluations (validations) of the sensitivity of the used search strings is rare, according to our survey of published systematic reviews and protocols. Potential reasons may involve a lack of familiarity or inaccessibility of complex sensitivity evaluation approaches. We first clarify the main concepts and principles of search string evaluation. We then present a simple procedure for estimating a relative recall of a search string. It is based on a pre-defined set of “benchmark” publications. The relative recall, that is, the sensitivity of the search string, is the retrieval overlap between the evaluated search string and a search string that captures only the benchmark publications. If there is little overlap (i.e., low recall or sensitivity), the evaluated search string should be improved to ensure that most of the relevant literature can be captured. The presented benchmarking approach can be applied to one or more online databases or search platforms. It is illustrated by five accessible, hands-on tutorials for commonly used online literature sources. Overall, our work provides an assessment of the current state of search string evaluations in published systematic reviews and protocols. It also paves the way to improve evaluation and reporting practices to make evidence synthesis more transparent and robust.},
+  doi      = {10.1017/rsm.2024.6},
+  file     = {:Lagisz2025 - A Practical Guide to Evaluating Sensitivity of Literature Search Strings for Systematic Reviews Using Relative Recall.pdf:PDF},
+}
+
+@Article{Booth2019,
+  author                 = {Booth, Andrew and Noyes, Jane and Flemming, Kate and Moore, Graham and Tunçalp, Özge and Shakibazadeh, Elham},
+  journal                = {BMJ Glob Health},
+  title                  = {Formulating questions to explore complex interventions within qualitative evidence synthesis.},
+  year                   = {2019},
+  pages                  = {e001107},
+  volume                 = {4},
+  electronic-issn        = {2059-7908},
+  linking-issn           = {2059-7908},
+  print-issn             = {2059-7908},
+  abstract               = {When making decisions about complex interventions, guideline development groups need to factor in the sociocultural acceptability of an intervention, as well as contextual factors that impact on the feasibility of that intervention. Qualitative evidence synthesis offers one method of exploring these issues. This paper considers the extent to which current methods of question formulation are meeting this challenge. It builds on a rapid review of 38 different frameworks for formulating questions. To be useful, a question framework should recognise context (as setting, environment or context); acknowledge the criticality of different stakeholder perspectives (differentiated from the target population); accommodate elements of time/timing and place; be sensitive to qualitative data (eg, eliciting themes or findings). None of the identified frameworks satisfied all four of these criteria. An innovative question framework, PerSPEcTiF, is proposed and retrospectively applied to a published WHO guideline for a complex intervention. Further testing and evaluation of the PerSPEcTiF framework is required.},
+  address                = {England},
+  article-doi            = {10.1136/bmjgh-2018-001107},
+  article-pii            = {bmjgh-2018-001107},
+  doi                    = {10.1136/bmjgh-2018-001107},
+  electronic-publication = {20190125},
+  file                   = {:Booth2019 - Formulating Questions to Explore Complex Interventions within Qualitative Evidence Synthesis..pdf:PDF},
+  grantno                = {MR/K023233/1/MRC_/Medical Research Council/United Kingdom},
+  history                = {2019/01/25 00:00 [pmc-release]},
+  issue                  = {Suppl 1},
+  keywords               = {qualitative study, systematic review},
+  language               = {eng},
+  location-id            = {e001107},
+  nlm-unique-id          = {101685275},
+  owner                  = {NLM},
+  publication-status     = {epublish},
+  revised                = {20230223},
+  source                 = {BMJ Glob Health. 2019 Jan 25;4(Suppl 1):e001107. doi: 10.1136/bmjgh-2018-001107. eCollection 2019.},
+  status                 = {PubMed-not-MEDLINE},
+  termowner              = {NOTNLM},
+  title-abbreviation     = {BMJ Glob Health},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
