--- a/glossar.bib
+++ b/glossar.bib
@@ -4600,4 +4600,37 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   title-abbreviation     = {BMJ Glob Health},
 }
 
+@Article{Bethel2021,
+  author             = {Bethel, Alison C. and Rogers, Morwenna and Abbott, Rebecca},
+  journal            = {J Med Libr Assoc},
+  title              = {Use of a search summary table to improve systematic review search methods, results, and efficiency.},
+  year               = {2021},
+  month              = jan,
+  pages              = {97--106},
+  volume             = {109},
+  electronic-issn    = {1558-9439},
+  linking-issn       = {1536-5050},
+  print-issn         = {1536-5050},
+  abstract           = {BACKGROUND: Systematic reviews are comprehensive, robust, inclusive, transparent, and reproducible when bringing together the evidence to answer a research question. Various guidelines provide recommendations on the expertise required to conduct a systematic review, where and how to search for literature, and what should be reported in the published review. However, the finer details of the search results are not typically reported to allow the search methods or search efficiency to be evaluated. CASE PRESENTATION: This case study presents a search summary table, containing the details of which databases were searched, which supplementary search methods were used, and where the included articles were found. It was developed and published alongside a recent systematic review. This simple format can be used in future systematic reviews to improve search results reporting. CONCLUSIONS: Publishing a search summary table in all systematic reviews would add to the growing evidence base about information retrieval, which would help in determining which databases to search for which type of review (in terms of either topic or scope), what supplementary search methods are most effective, what type of literature is being included, and where it is found. It would also provide evidence for future searching and search methods research.},
+  address            = {United States},
+  article-doi        = {10.5195/jmla.2021.809},
+  article-pii        = {jmla.2021.809},
+  completed          = {20210706},
+  doi                = {10.5195/jmla.2021.809},
+  file               = {:Bethel2021 - Use of a Search Summary Table to Improve Systematic Review Search Methods, Results, and Efficiency..pdf:PDF},
+  history            = {2021/01/01 00:00 [pmc-release]},
+  issue              = {1},
+  keywords           = {Humans, Abstracting and Indexing/methods, Databases, Bibliographic/statistics & numerical data, *Information Dissemination/methods, Information Storage and Retrieval/methods, *Systematic Reviews as Topic/methods},
+  language           = {eng},
+  location-id        = {10.5195/jmla.2021.809 [doi]},
+  nlm-unique-id      = {101132728},
+  owner              = {NLM},
+  publication-status = {ppublish},
+  revised            = {20240330},
+  source             = {J Med Libr Assoc. 2021 Jan 1;109(1):97-106. doi: 10.5195/jmla.2021.809.},
+  status             = {MEDLINE},
+  subset             = {IM},
+  title-abbreviation = {J Med Libr Assoc},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
